# montte-nx

./: .dockerignore  .env.production.example  .gitattributes  .gitignore  .oxfmtrc.json  2026-02-11-marketing-plan.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE.md  MARKETING.md  NEXT_STEPS.md  PRODUCT.md  README.md  RELEASE_NOTES.md  biome.json  bunfig.toml  changes.md  codecov.yml  commitlint.config.js  docker-compose.prod.yml  graph.json  hyprpay-explained.md  lefthook.yml  mcp.json  montte-ai-chat-refactor-plan.md  montte-ai-prompts-audit.md  montte.pen  nx.json  opencode.json  package.json  progress.md  skills-lock.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.flue/: app.ts
.husky/: pre-commit
__tests__/: pr-review-inline-comments.test.ts  workspace-scripts.test.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: ai-code-review-deepresearch-prompt.md  llms.txt  neverthrow-to-better-result.md  posthog-dashboard-setup.md
notes/: billing-primitives-research.md  brazil-erp-integrations-research.md  cohesive-ai-platform-architecture-plan.md  cohesive-ai-platform-current-state.md  cohesive-ai-platform-external-research.md  erp-ai-native-research.md  montte-current-state-scout.md
outputs/: contratos-ai-native-somahub.md  erp-billing-ai-native-roadmap.md  erp-billing-ai-native-roadmap.provenance.md  montte-ai-architecture-consolidated.md  montte-deep-integrated-ai-native-platform.md  montte-deep-integrated-ai-native-platform.provenance.md  (+5 more)
(+3310 files in other folders)
