[package]
name = "montte-desktop"
version = "0.2.0"
description = "Montte desktop shell"
authors = ["Montte"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "montte_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
